--- a/acrepo-itests/pom.xml
+++ b/acrepo-itests/pom.xml
@@ -54,7 +54,7 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-jsonld-service</artifactId>
+      <artifactId>acrepo-exts-jsonld</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
