--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
     <module>acrepo-services-mint</module>
     <module>acrepo-services-validation</module>
     <module>acrepo-xml-metadata</module>
-    <module>acrepo-jsonld-service</module>
+    <module>acrepo-exts-jsonld</module>
     <module>acrepo-template-mustache</module>
     <module>acrepo-fits-rest</module>
   </modules>
