--- a/acrepo-karaf/pom.xml
+++ b/acrepo-karaf/pom.xml
@@ -31,7 +31,7 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-jsonld-service</artifactId>
+      <artifactId>acrepo-exts-jsonld</artifactId>
       <scope>test</scope>
       <version>${project.version}</version>
     </dependency>
