--- a/acrepo-services-ldcache-file/pom.xml
+++ b/acrepo-services-ldcache-file/pom.xml
@@ -9,14 +9,14 @@
       <version>1.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>acrepo-services-ldcache</artifactId>
+    <artifactId>acrepo-services-ldcache-file</artifactId>
     <packaging>bundle</packaging>
 
-    <name>Linked Data Caching Service</name>
-    <description>Simple Linked Data Caching Service, using Marmotta</description>
+    <name>File backend for the Linked Data Caching Service</name>
+    <description>A file backend for the Linked Data Caching Service</description>
 
     <properties>
-      <osgi.export.packages>edu.amherst.acdc.services.ldcache;version=${project.version}</osgi.export.packages>
+      <osgi.export.packages>edu.amherst.acdc.services.ldcache.file;version=${project.version}</osgi.export.packages>
     </properties>
 
     <dependencies>
@@ -27,22 +27,7 @@
 
       <dependency>
         <groupId>org.apache.marmotta</groupId>
-        <artifactId>ldcache-core</artifactId>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.marmotta</groupId>
-        <artifactId>ldclient-provider-rdfa</artifactId>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.marmotta</groupId>
-        <artifactId>ldclient-provider-rdf</artifactId>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.marmotta</groupId>
-        <artifactId>ldclient-provider-xml</artifactId>
+        <artifactId>ldcache-backend-file</artifactId>
       </dependency>
 
       <!-- logging -->
@@ -55,13 +40,6 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-      </dependency>
-
-      <dependency>
-        <groupId>edu.amherst.acdc</groupId>
-        <artifactId>acrepo-services-ldcache-file</artifactId>
-        <scope>test</scope>
-        <version>${project.version}</version>
       </dependency>
 
       <dependency>
@@ -113,7 +91,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>src/main/cfg/edu.amherst.acdc.services.ldcache.cfg</file>
+                  <file>src/main/cfg/edu.amherst.acdc.services.ldcache.file.cfg</file>
                   <type>cfg</type>
                   <classifier>configuration</classifier>
                 </artifact>
