--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
     <module>acrepo-karaf</module>
     <module>acrepo-services-jsonld</module>
     <module>acrepo-services-ldcache</module>
+    <module>acrepo-services-ldcache-file</module>
     <module>acrepo-services-mint</module>
     <module>acrepo-services-validation</module>
     <module>acrepo-xml-metadata</module>
