--- a/acrepo-exts-fits/pom.xml
+++ b/acrepo-exts-fits/pom.xml
@@ -8,14 +8,14 @@
       <version>1.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>acrepo-fits-rest</artifactId>
+    <artifactId>acrepo-exts-fits</artifactId>
     <packaging>bundle</packaging>
 
     <name>FITS service bundle</name>
     <description>Repository FITS service, which will retrieve FITS information associated with a NonRdfSource located in a Fedora Repository.</description>
 
     <properties>
-      <osgi.export.packages>edu.amherst.acdc.fits.rest;version=${project.version}</osgi.export.packages>
+      <osgi.export.packages>edu.amherst.acdc.exts.fits;version=${project.version}</osgi.export.packages>
     </properties>
 
     <dependencies>
@@ -109,7 +109,7 @@
             <configuration>
               <artifacts>
                 <artifact>
-                  <file>src/main/cfg/edu.amherst.acdc.fits.rest.cfg</file>
+                  <file>src/main/cfg/edu.amherst.acdc.exts.fits.cfg</file>
                   <type>cfg</type>
                   <classifier>configuration</classifier>
                 </artifact>
