--- a/acrepo-idiomatic/pom.xml
+++ b/acrepo-idiomatic/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>commons-io</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
