--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,10 @@
   <modules>
     <module>acrepo-idiomatic-pgsql</module>
     <module>acrepo-idiomatic</module>
-    <module>acrepo-image-service</module>
+    <module>acrepo-exts-fits</module>
+    <module>acrepo-exts-image</module>
+    <module>acrepo-exts-jsonld</module>
+    <module>acrepo-exts-serialize-xml</module>
     <module>acrepo-karaf</module>
     <module>acrepo-services-jsonld</module>
     <module>acrepo-services-ldcache</module>
@@ -117,9 +120,6 @@
     <module>acrepo-services-pcdm</module>
     <module>acrepo-services-validation</module>
     <module>acrepo-template-mustache</module>
-    <module>acrepo-exts-fits</module>
-    <module>acrepo-exts-jsonld</module>
-    <module>acrepo-exts-serialize-xml</module>
   </modules>
 
   <dependencyManagement>
