--- a/acrepo-itests/pom.xml
+++ b/acrepo-itests/pom.xml
@@ -29,7 +29,7 @@
 
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-idiomatic</artifactId>
+      <artifactId>acrepo-connector-idiomatic</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
