--- a/acrepo-karaf/pom.xml
+++ b/acrepo-karaf/pom.xml
@@ -17,7 +17,7 @@
   <dependencies>
     <dependency>
       <groupId>edu.amherst.acdc</groupId>
-      <artifactId>acrepo-idiomatic</artifactId>
+      <artifactId>acrepo-connector-idiomatic</artifactId>
       <scope>test</scope>
       <version>${project.version}</version>
     </dependency>
