--- a/pom.xml
+++ b/pom.xml
@@ -107,8 +107,8 @@
 
   <modules>
     <module>acrepo-connector-broadcast</module>
-    <module>acrepo-idiomatic-pgsql</module>
     <module>acrepo-connector-idiomatic</module>
+    <module>acrepo-connector-idiomatic-pgsql</module>
     <module>acrepo-exts-fits</module>
     <module>acrepo-exts-image</module>
     <module>acrepo-exts-jsonld</module>
