Converts connectors to use acrepo-services-activemq

--- a/acrepo-connector-broadcast/src/main/cfg/edu.amherst.acdc.connector.broadcast.cfg
+++ b/acrepo-connector-broadcast/src/main/cfg/edu.amherst.acdc.connector.broadcast.cfg
@@ -1,11 +1,6 @@
-# Information about the broker to use
-jms.brokerUrl=tcp://localhost:61616
-jms.username=
-jms.password=
-
 # Which queue/topic to listen to on the above broker
-jms.input=activemq:topic:fedora
+input.stream=broker:topic:fedora
 
 # Comma separated list of recipient queues to broadcast the incoming messages to
-# for example: "activemq:queue:fcrepo-serialization,activemq:queue:fcrepo-indexing-triplestore"
+# for example: "broker:queue:fcrepo-serialization,broker:queue:fcrepo-indexing-triplestore"
 message.recipients=
