--- a/acrepo-connector-idiomatic/src/main/cfg/edu.amherst.acdc.connector.idiomatic.cfg
+++ b/acrepo-connector-idiomatic/src/main/cfg/edu.amherst.acdc.connector.idiomatic.cfg
@@ -4,11 +4,8 @@ error.maxRedeliveries=10
 # Fedora Repository location
 fcrepo.baseUrl=localhost:8080/fcrepo/rest
 
-# The connection URI used to connect to a local or remote ActiveMQ broker
-jms.brokerUrl=tcp://localhost:61616
-
 # The camel URI for the incoming message stream.
-input.stream=activemq:topic:fedora
+input.stream=broker:topic:fedora
 
 # The rest endpoint components
 rest.host=localhost
