--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <commons-lang.version>3.4</commons-lang.version>
     <commons-io.version>2.5</commons-io.version>
     <derby.version>10.12.1.1</derby.version>
-    <fcrepo-camel.version>4.4.2</fcrepo-camel.version>
+    <fcrepo-camel.version>4.4.3</fcrepo-camel.version>
     <hk2.version>2.4.0</hk2.version>
     <junit.version>4.12</junit.version>
     <jsonld.version>0.8.3</jsonld.version>
@@ -187,17 +187,10 @@
         <artifactId>fcrepo-camel</artifactId>
         <version>${fcrepo-camel.version}</version>
         <exclusions>
+          <!-- jena has a runtime dep on slf4j-log4j -->
           <exclusion>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
