--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects  {
             options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
         }
     }
+
+    afterReleaseBuild.dependsOn uploadArchives
 }
 
 subprojects {
@@ -95,6 +97,21 @@ subprojects {
         into 'build/cfg/main'
     }
 
+    task sourceJar(type: Jar) {
+        classifier 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar) {
+        classifier 'javadoc'
+        from javadoc
+    }
+
+    artifacts {
+        archives javadocJar
+        archives sourceJar
+    }
+
     classes {
         classes.dependsOn processConfig
     }
@@ -117,6 +134,7 @@ subprojects {
         publications {
             maven(MavenPublication) {
                 from components.java
+                artifact sourceJar
             }
         }
     }
