Gradle-based integration tests with pax-exam

--- a/acrepo-services-activemq/build.gradle
+++ b/acrepo-services-activemq/build.gradle
@@ -11,7 +11,11 @@ dependencies {
 }
 
 task buildMainClasses {
-    file('build/classes/main').mkdirs()
+    ext.destDir = file('build/classes/main')
+    outputs.dir destDir
+    doLast {
+        destDir.mkdirs()
+    }
 }
 
 jar {
