--- a/acrepo-exts-serialize-xml/src/main/cfg/edu.amherst.acdc.exts.serialize.xml.cfg
+++ b/acrepo-exts-serialize-xml/src/main/cfg/edu.amherst.acdc.exts.serialize.xml.cfg
@@ -3,7 +3,7 @@ rest.port=9104
 rest.host=localhost
 
 # The fedora baseUrl
-fcrepo.baseUrl=localhost:8080/fcrepo/rest
+fcrepo.baseUrl=http://localhost:8080/fcrepo/rest
 
 # The location of the XSLT to convert RDF/XML to MODS/XML and DC/XML
 mods.xslt=edu/amherst/acdc/exts/serialize/xml/rdf2mods.xsl
