--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ allprojects  {
     group = 'edu.amherst.acdc'
 
     repositories {
+        jcenter()
         mavenCentral()
         mavenLocal()
     }
