--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,6 @@ allprojects  {
         tagTemplate = '$name-$version'
     }
 
-    afterReleaseBuild.dependsOn uploadArchives
-    afterReleaseBuild.dependsOn publishGhPages
 }
 
 subprojects {
@@ -230,6 +228,11 @@ subprojects {
                 }
             }
         }
+    }
+
+    if (project.name != 'acrepo-itests') {
+        afterReleaseBuild.dependsOn uploadArchives
+        afterReleaseBuild.dependsOn publishGhPages
     }
 }
 
