--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'repository-services'
 include ':acrepo-connector-broadcast'
 include ':acrepo-connector-idiomatic'
+include ':acrepo-connector-idiomatic-mysql'
 include ':acrepo-connector-idiomatic-pgsql'
 include ':acrepo-exts-fits'
 include ':acrepo-exts-image'
@@ -20,6 +21,7 @@ include ':acrepo-itests'
 
 project(':acrepo-connector-broadcast').projectDir = "$rootDir/acrepo-connector-broadcast" as File
 project(':acrepo-connector-idiomatic').projectDir = "$rootDir/acrepo-connector-idiomatic" as File
+project(':acrepo-connector-idiomatic-mysql').projectDir = "$rootDir/acrepo-connector-idiomatic-mysql" as File
 project(':acrepo-connector-idiomatic-pgsql').projectDir = "$rootDir/acrepo-connector-idiomatic-pgsql" as File
 project(':acrepo-exts-fits').projectDir = "$rootDir/acrepo-exts-fits" as File
 project(':acrepo-exts-image').projectDir = "$rootDir/acrepo-exts-image" as File
