--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.github.hierynomus.license' version '0.13.1'
     id 'net.researchgate.release' version '2.4.0'
+    id 'org.sonarqube' version '2.2.1'
 }
 
 allprojects  {
@@ -247,6 +248,13 @@ task processBuildTools(type: Copy) {
         }
     }
     into 'build'
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectName", "Amherst College Repository Extension Services"
+        property "sonar.projectKey", "edu.amherst.acdc:repository-services"
+    }
 }
 
 task docs(type: Javadoc) {
