--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ subprojects {
     apply plugin: 'signing'
     apply plugin: 'checkstyle'
     apply plugin: 'com.github.hierynomus.license'
+    apply plugin: 'jacoco'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -131,6 +132,10 @@ subprojects {
     checkstyle {
         configFile = rootProject.file('build/checkstyle/checkstyle.xml')
         configProperties.checkstyleConfigDir = rootProject.file('build/checkstyle/')
+    }
+
+    jacoco {
+        toolVersion = "0.7.6.201602180812"
     }
 
     license {
