--- a/acrepo-connector-idiomatic/src/main/cfg/edu.amherst.acdc.connector.idiomatic.cfg
+++ b/acrepo-connector-idiomatic/src/main/cfg/edu.amherst.acdc.connector.idiomatic.cfg
@@ -2,7 +2,7 @@
 error.maxRedeliveries=10
 
 # Fedora Repository location
-fcrepo.baseUrl=localhost:8080/fcrepo/rest
+fcrepo.baseUrl=http://localhost:8080/fcrepo/rest
 
 # The camel URI for the incoming message stream.
 input.stream=broker:topic:fedora
@@ -13,12 +13,5 @@ rest.port=9101
 rest.prefix=/idiomatic
 
 # The RDF property to use as an external identifier
-id.property=dc:identifier
+id.property=http://purl.org/dc/elements/1.1/identifier
 
-# The full namespace of the above property
-id.namespace=http://purl.org/dc/elements/1.1/
-
-# An external identifier may have a standard prefix, as it is stored
-# in fedora. By setting this value, that prefix will be removed from
-# the id-mapping layer (e.g. http://example.org/)
-id.prefix=
