--- a/acrepo-services-activemq/build.gradle
+++ b/acrepo-services-activemq/build.gradle
@@ -26,7 +26,7 @@ jar {
         vendor project.vendor
         license project.license
 
-        instruction 'Import-Package', "org.apache.camel,org.apache.activemq.camel.component,${defaultOsgiImports}"
+        instruction 'Import-Package', "org.apache.camel,org.apache.activemq,org.apache.activemq.camel.component,org.apache.activemq.pool,org.apache.camel.component.jms,${defaultOsgiImports}"
         instruction 'Export-Package', "edu.amherst.acdc.services.activemq;version=${projectOsgiVersion}"
     }
 }
