Adds customized LDPath service
Resolves: #24

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ subprojects {
 
         camelVersionRange = '[2.18,3)'
         activemqVersionRange = '[5.14,6)'
+        fcrepoCamelVersionRange = '[4.5,5)'
+        fcrepoCamelToolboxVersionRange = '[4.7,5)'
 
         /* Dependencies */
         activemqVersion = '5.14.1'
@@ -54,6 +56,7 @@ subprojects {
         commonsLangVersion = '3.4'
         derbyVersion = '10.12.1.1'
         fcrepoCamelVersion = '4.5.0'
+        fcrepoCamelToolboxVersion = '4.7.0'
         hk2Version = '2.4.0'
         httpclientVersion = '4.5.2'
         httpcoreVersion = '4.4.5'
