--- a/acrepo-itests/build.gradle
+++ b/acrepo-itests/build.gradle
@@ -77,6 +77,7 @@ dependencies {
         exclude(module: 'slf4j-log4j12')
     }
 
+    testCompile group: 'org.fcrepo.camel', name: 'toolbox-features', version: fcrepoCamelToolboxVersion, classifier: 'features', ext: 'xml'
     testCompile group: 'org.apache.camel.karaf', name: 'apache-camel', version: camelVersion, classifier:'features', ext: 'xml'
     testCompile group: 'org.apache.activemq', name: 'activemq-karaf', version: activemqVersion, classifier:'features', ext: 'xml'
     testCompile group: 'org.apache.karaf.features', name: 'standard', version: karafVersion, classifier:'features', ext: 'xml'
@@ -143,6 +144,7 @@ test {
     systemProperty 'karaf.image.port', randomPort()
     systemProperty 'karaf.idiomatic.port', randomPort()
     systemProperty 'karaf.fits.port', randomPort()
+    systemProperty 'karaf.ldpath.port', randomPort()
 
     systemProperty 'fcrepo.dynamic.test.port', fcrepoWebPort
     systemProperty 'fcrepo.dynamic.jms.port', fcrepoJmsPort
