--- a/acrepo-exts-fits/src/main/cfg/edu.amherst.acdc.exts.fits.cfg
+++ b/acrepo-exts-fits/src/main/cfg/edu.amherst.acdc.exts.fits.cfg
@@ -10,4 +10,4 @@ rest.port=9106
 rest.host=localhost
 
 # The endpoint for the FITS server
-fits.endpoint=localhost:8080/fits
+fits.endpoint=localhost:8080/fits/examine
