--- a/acrepo-exts-template/src/main/cfg/edu.amherst.acdc.exts.template.cfg
+++ b/acrepo-exts-template/src/main/cfg/edu.amherst.acdc.exts.template.cfg
@@ -7,13 +7,14 @@ rest.port=9103
 rest.prefix=/template
 
 # The fedora baseUrl
-fcrepo.baseUrl=localhost:8080/fcrepo/rest
+fcrepo.baseUrl=http://localhost:8080/fcrepo/rest
 
 # The resulting content-type
 mustache.contentType=text/html
 
 # The mustache template
-mustache.templateUri=edu/amherst/acdc/template/template.mustache
+mustache.templateUri=edu/amherst/acdc/exts/template/template.mustache
 
 # The json+ld context file
-jsonld.context=https://acdc.amherst.edu/jsonld/models.json
+ldpath.serviceUrl=http://localhost:9086/ldpath
+
