Update custom LDPath extension to use fcrepo-camel-toolbox/4.7.1

--- a/acrepo-exts-ldpath/build.gradle
+++ b/acrepo-exts-ldpath/build.gradle
@@ -48,6 +48,7 @@ jar {
             org.apache.marmotta.ldclient.endpoint.rdf,
             org.apache.marmotta.ldclient.provider.rdf,
             org.apache.marmotta.ldpath.backend.linkeddata,
+            org.fcrepo.client,
             org.fcrepo.camel.ldpath,
             ${defaultOsgiImports}"""
         instruction 'Export-Package', "edu.amherst.acdc.exts.ldpath;version=${projectOsgiVersion}"
