--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ subprojects {
         camelVersionRange = '[2.18,3)'
         activemqVersionRange = '[5.14,6)'
         fcrepoCamelVersionRange = '[4.5,5)'
-        fcrepoCamelToolboxVersionRange = '[4.7,5)'
+        fcrepoCamelToolboxVersionRange = '[4.7.1,5)'
 
         /* Dependencies */
         activemqVersion = '5.14.1'
@@ -56,7 +56,7 @@ subprojects {
         commonsLangVersion = '3.4'
         derbyVersion = '10.12.1.1'
         fcrepoCamelVersion = '4.5.0'
-        fcrepoCamelToolboxVersion = '4.7.0'
+        fcrepoCamelToolboxVersion = '4.7.1'
         hk2Version = '2.4.0'
         httpclientVersion = '4.5.2'
         httpcoreVersion = '4.4.5'
@@ -84,6 +84,7 @@ subprojects {
         commonsValidatorVersion = '1.4.0'
         dexxVersion = '0.6'
         fluentHcVersion = '4.5.2'
+        fcrepoClientVersion = '0.2.1'
         httpclientCacheVersion = '4.3.5'
         httpmimeVersion = '4.5.2'
         httpcoreNioVersion = '4.4.4'
