--- a/acrepo-exts-ldpath/src/main/cfg/edu.amherst.acdc.exts.ldpath.cfg
+++ b/acrepo-exts-ldpath/src/main/cfg/edu.amherst.acdc.exts.ldpath.cfg
@@ -25,4 +25,4 @@ cache.timeout=86400
 # API-X configuration
 extension.load=true
 extension.load.uri=http://apix/services//apix:load
-extension.load.maxiumumRedeliveries=60
+extension.load.maximumRedeliveries=60
